@@ -424,6 +424,9 @@ Other Changes
 29. SOLR-997: Wait for a longer time for slave to complete replication in TestReplicationHandler
     (Mark Miller via shalin)
 
+30. SOLR-748: FacetComponent helper classes are made public as an experimental API.
+    (Wojtek Piaseczny via shalin)
+
 Build
 ----------------------
  1. SOLR-776: Added in ability to sign artifacts via Ant for releases (gsingers)
